virtual thread blocking